--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build --platform linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:latest .
+        docker buildx build --platform linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:latest .
         docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:latest
 
     - name: Update kubeconfig
