--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,10 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker buildx build --platform linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:latest .
-        docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:latest
+       docker buildx build \
+       --platform linux/arm64 \
+       --push \
+       -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:latest .
 
     - name: Update kubeconfig
       run: |
