--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,4 +57,4 @@ jobs:
           --namespace default \
           --create-namespace \
           --atomic \
-          --set awsAccountId=${{ env.AWS_ACCOUNT_ID }}
+          --set awsAccountId=${{ secrets.AWS_ACCOUNT_ID }}
